Went back to using classes & id's to make sure learning annotations icons work as intended on IE as well

--- a/pas_ref_app/appserver/static/help_hover.css
+++ b/pas_ref_app/appserver/static/help_hover.css
@@ -33,12 +33,12 @@
     width:100%;
 }
 
-.learn-left {
+#learn-left {
 	width:50%;
 	float:left;
 }
 
-.learn-right {
+#learn-right {
 	width:50%;
 	float:right;
 	text-align: right;
